[gd_scene load_steps=22 format=3 uid="uid://cottu2ef8u5u5"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_n04gd"]
[ext_resource type="Script" path="res://Scripts/SwordHitBox.gd" id="2_tvsp4"]
[ext_resource type="Texture2D" uid="uid://5jw7xpb0u1h" path="res://Sprites/Player/Sword.png" id="3_fcye7"]
[ext_resource type="Texture2D" uid="uid://8u87831vlj84" path="res://Sprites/Player/frogman_spritesheet.png" id="4_03kl0"]
[ext_resource type="AudioStream" uid="uid://cf2ukg41ra75o" path="res://SFX/pick up bug.wav" id="5_mcwkm"]
[ext_resource type="AudioStream" uid="uid://d16om0bp206kd" path="res://SFX/spit_attack.wav" id="5_nnora"]
[ext_resource type="AudioStream" uid="uid://b0kbhynrvbt6u" path="res://SFX/player damage.wav" id="5_p14w8"]
[ext_resource type="AudioStream" uid="uid://csqyoybq1q4l0" path="res://SFX/giga_lazer.mp3" id="7_cagud"]

[sub_resource type="Animation" id="Animation_wg0gi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHitBox/SwordCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nqqm5"]
resource_name = "SwordAttack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_sword_projectile"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHitBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordHitBox/SwordCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0xfg"]
_data = {
"RESET": SubResource("Animation_wg0gi"),
"SwordAttack": SubResource("Animation_nqqm5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0odcg"]
size = Vector2(10, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_uppyj"]
radius = 8.0

[sub_resource type="Animation" id="Animation_0m42m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_j3o6y"]
resource_name = "fall_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_43dsm"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_qg28v"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8bh0"]
_data = {
"RESET": SubResource("Animation_0m42m"),
"fall_in": SubResource("Animation_j3o6y"),
"idle": SubResource("Animation_43dsm"),
"walk": SubResource("Animation_qg28v")
}

[sub_resource type="Animation" id="Animation_cwe0s"]
resource_name = "Blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_j0ukf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2c54"]
_data = {
"Blink": SubResource("Animation_cwe0s"),
"RESET": SubResource("Animation_j0ukf")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
script = ExtResource("1_n04gd")
movement_speed = 0.12
wait_before_move = 0.07

[node name="SwordHitBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 16
script = ExtResource("2_tvsp4")

[node name="Sprite2D" type="Sprite2D" parent="SwordHitBox"]
texture = ExtResource("3_fcye7")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SwordHitBox"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_e0xfg")
}

[node name="SwordCollisionShape2D" type="CollisionShape2D" parent="SwordHitBox"]
position = Vector2(8, 7)
shape = SubResource("RectangleShape2D_0odcg")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_03kl0")
centered = false
offset = Vector2(0, -2)
hframes = 4
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_uppyj")

[node name="CollisionRay" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(-16, 0)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 232

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
polygon = PackedVector2Array(1, 5, 15, 5, 11, 13, 5, 13)

[node name="PlayerCenter" type="Marker2D" parent="."]
position = Vector2(8, 8)
gizmo_extents = 18.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_y8bh0")
}

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a2c54")
}

[node name="BugSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mcwkm")

[node name="SpitAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nnora")

[node name="PlayerDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p14w8")

[node name="LazerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cagud")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
